--- a/source/styles/index/header.scss
+++ b/source/styles/index/header.scss
@@ -25,9 +25,11 @@
     position: relative;
     top: 283px;
     @media (min-width: $width-tablet) {
+      width: 768px;
       top: 627px;
     }
     @media (min-width: $width-desktop) {
+      width: 1050px;
       margin-left: 100px;
       margin-right: 50px;
     }
@@ -38,20 +40,20 @@
         position: absolute;
         height: 24px;
         width: 768px;
-        bottom: 0;
+        bottom: -1px;
         background-image: url(../../static/images/tablet/svg/header/zigzag-fill-desktop.svg);
       }
       @media (min-width: $width-desktop) {
         position: absolute;
         height: 34px;
         width: 1250px;
-        bottom: 0;
+        bottom: -1px;
         background-image: url(../../static/images/desktop/svg/header/zigzag-fill-desktop.svg);
         left: -100px;
       }
     }
   }
-
+  
   &__large-text {
     display: inline-block;
     width: 261px;
@@ -97,9 +99,9 @@
       align-items: flex-end;
       justify-content: space-between;
       width: 1050px;
-      height: 160px;
+      height: 50px;
       left: 100px;
-      top: -120px;
+      top: -10px;
     }
     
     & a{
@@ -134,13 +136,16 @@
   }
 
   &__button {
+    width: 100%;
     height: 103px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 30px;
-    padding-right: 30px;
+    // padding-left: 30px;
+    // padding-right: 30px;
+    border: none;
     @media (min-width: $width-tablet) {
+      // width: 50%;
       height: 130px;
       box-sizing: border-box;
       align-items: flex-start;
@@ -152,25 +157,82 @@
     &:hover {
       cursor: pointer;
     }
+
+    &:active p {
+      color: #8be2d0;
+    }
   }
 
   &__button:first-child {
     background-color: #63d1bb;
+    padding: 0 30px 0 15px;
     @media (min-width: $width-tablet) {
       width: 334px;
       float: left;
+      padding: 0 30px 12px 24px;
       margin-left: 50px;
     }
     @media (min-width: $width-desktop) {
       width: 525px;
+      padding: 0 30px 18px 27px;
       margin-left: 0;
+    }
+    & svg{
+      fill: #3bb09d;
+      padding: 10px 5px 0 0;
+      @media (min-width: $width-tablet) {
+        padding-top: 0;
+      }
+    }
+
+    & p{
+      @media (min-width: $width-tablet) {
+        padding-top: 0;
+      }
+      @media (min-width: $width-desktop) {
+        padding-top: 7px;
+      }
+    }
+    
+    &:hover svg{
+      fill: #29a592;
+    }
+  
+    &:active svg {
+      fill: #44c0aa;
     }
   }
 
   &__button:nth-child(2) {
     background-color: #56c3b2;
+    padding: 0 30px 0 5px;
     @media (min-width: $width-tablet) {
-      margin-right: 50px;
+      width: 334px;
+      padding: 0 35px 14px 17px;
+      // margin-right: 50px;
+    }
+    @media (min-width: $width-desktop) {
+      width: 525px;
+    }
+    & svg{
+      fill: #35a999;
+      @media (min-width: $width-desktop) {
+        padding-top: 5px;
+      }
+    }
+
+    & p{
+      @media (min-width: $width-desktop) {
+        padding-top: 0;
+      }
+    }
+    
+    &:hover svg{
+      fill: #239f8e;
+    }
+  
+    &:active svg {
+      fill: #37b2a0;
     }
   }
 
