--- a/source/styles/mainStyles/main.scss
+++ b/source/styles/mainStyles/main.scss
@@ -1,7 +1,6 @@
 @import "../variables";
 
 body {
-  background-color: pink;
   margin: 0;
   padding: 0;
   font-family: $font-family;
@@ -42,4 +41,11 @@ p {
   @media (min-width: $width-desktop) {
     width: $width-desktop;
   }
+}
+
+ul,
+li{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
