--- a/source/styles/index/featured.scss
+++ b/source/styles/index/featured.scss
@@ -190,18 +190,26 @@
     background-color: #ffffff;
     border: 2px solid #444444;
     cursor: pointer;
-    margin-bottom: 28px;
+    margin-bottom: 34px;
     @media (min-width: $width-tablet) {
       grid-area: b;
       width: 290px;
       font-size: 17px;
+    }
+    &:hover{
+      background-color: #444444;
+      color: #ffffff;
+    }
+    &:active{
+      background-color: #444444;
+      color: #7c7c7c;
     }
   }
 
   &__image {
     height: 315px;
     width: 260px;
-    margin-bottom: 20px;
+    margin-bottom: 24px;
     @media (min-width: $width-tablet) {
       height: 404px;
       width: 333px;
