--- a/source/styles/form/form.scss
+++ b/source/styles/form/form.scss
@@ -142,6 +142,18 @@
           background-repeat: no-repeat;
         }
       }
+      &:hover:before{
+        background: url("../../static/images/mobile/svg/form_form/radio-off_hover.svg");
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/radio-off_hover.svg");
+        }
+      }
+      &:active:before{
+        background: url("../../static/images/mobile/svg/form_form/radio-off_active.svg");
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/radio-off_active.svg");
+        }
+      }
   
       &:after {
         content: '';
@@ -170,6 +182,18 @@
           left: -52px;
           background: url("../../static/images/tablet/svg/form_form/radio-on.svg");
           background-repeat: no-repeat;
+        }
+      }
+      &:hover:after{
+        background: url("../../static/images/mobile/svg/form_form/radio-on_hover.svg");
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/radio-on_hover.svg");
+        }
+      }
+      &:active:after{
+        background: url("../../static/images/mobile/svg/form_form/radio-on_active.svg");
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/radio-on_active.svg");
         }
       }
     }
@@ -221,6 +245,9 @@
 
     & label:nth-child(odd){
       margin-right: 20px;
+      @media (min-width: $width-desktop) {
+        margin-right: 25px;
+      }
     }
 
     & label{
@@ -276,6 +303,23 @@
           height: 54px;
           top: -13px;
           background: url("../../static/images/tablet/svg/form_form/cheakbox-off.svg");
+          background-repeat: no-repeat;
+        }
+      }
+
+      &:hover:before{
+        background: url("../../static/images/mobile/svg/form_form/cheakbox-off_hover.svg");
+        background-repeat: no-repeat;
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/cheakbox-off_hover.svg");
+          background-repeat: no-repeat;
+        }
+      }
+      &:active:before{
+        background: url("../../static/images/mobile/svg/form_form/cheakbox-off_active.svg");
+        background-repeat: no-repeat;
+        @media (min-width: $width-tablet) {
+          background: url("../../static/images/tablet/svg/form_form/cheakbox-off_active.svg");
           background-repeat: no-repeat;
         }
       }
@@ -418,6 +462,14 @@
 			}
     }
 
+    &:hover::after{
+      content: url(../../static/images/mobile/svg/form_form/phone_hover.svg);
+    }
+
+    &:focus::after{
+      content: url(../../static/images/mobile/svg/form_form/phone_hover.svg);
+    }
+
     & .form__title-text{
       margin-bottom: 20px;
       @media (min-width: $width-tablet) {
@@ -440,7 +492,7 @@
 				padding-right: 40px;
 				padding-top: 6px;
 				width: 660px;
-			}
+      }
     }
   }
 
@@ -479,6 +531,14 @@
 				top: 1px;
 				left: -36px;
 			}
+    }
+
+    &:hover::after{
+      content: url(../../static/images/mobile/svg/form_form/mail_hover.svg);
+    }
+
+    &:focus::after{
+      content: url(../../static/images/mobile/svg/form_form/mail_hover.svg);
     }
 
     & .form__title-text{
@@ -554,7 +614,15 @@
       }
       @media (min-width: $width-desktop) {
 				width: 702px;
-			}
+      }
+
+      &:hover{
+        border: 2px solid #62d1ba;
+      }
+
+      &:focus{
+        border: 2px solid #62d1ba;
+      }
     }
   }
 
@@ -580,6 +648,16 @@
     @media (min-width: $width-tablet) {
       width: 230px;
     }
+
+    &:hover{
+      background-color: #444444;
+      color: #ffffff;
+    }
+    
+    &:active{
+      background-color: #444444;
+      color: #7c7c7c;
+    }
   }
 
   & input{
@@ -592,6 +670,12 @@
       @media (min-width: $width-tablet) {
         font-size: 19px;
       }
+    }
+    &:hover{
+      border-bottom: 2px solid #62d1ba;
+    }
+    &:focus{
+      border-bottom: 2px solid #62d1ba;
     }
   }
 
