--- a/source/styles/catalog/items.scss
+++ b/source/styles/catalog/items.scss
@@ -25,6 +25,7 @@
     margin-left: 30px;
     margin-right: 30px;
     margin-bottom: 30px;
+    cursor: pointer;
     @media (min-width: $width-tablet) {
       width: 768px;
       display: flex;
@@ -62,6 +63,26 @@
           height: 198px;
         }
       }
+    }
+    &:hover{
+      box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.1); 
+    }
+    &:active{
+      box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1); 
+    }
+
+    &:hover .items__large-text:first-child{
+      color: #666666;
+    }
+    &:active .items__large-text:first-child{
+      color: #b2b2b2;
+    }
+
+    &:hover .items__price::after{
+      content: url(../../static/images/mobile/svg/catalog_items/cart_hover.svg);
+    }
+    &:active .items__price::after{
+      content: url(../../static/images/mobile/svg/catalog_items/cart_active.svg);
     }
   }
 
