--- a/source/styles/catalog/video.scss
+++ b/source/styles/catalog/video.scss
@@ -77,6 +77,7 @@
     position: relative;
     height: 150px;
     width: 260px;
+    cursor: pointer;
     @media (min-width: $width-tablet) {
       grid-area: i;
       height: 445px;
@@ -96,6 +97,14 @@
         left: 290px;
       }
     }
+
+    &:hover::before{
+      transform: scale(1.2, 1.2);
+    }
+    &:active::before{
+      content: url(../../static/images/mobile/svg/catalog_video/play_active.svg);
+      transform: scale(0.8, 0.8);
+    }
   }
 
   &__small-text {
@@ -107,7 +116,7 @@
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 25px;
-    margin-top: 26px;
+    margin-top: 22px;
     @media (min-width: $width-tablet) {
       width: 710px;
       font-size: 15px;
@@ -115,6 +124,7 @@
       grid-area: st;
       padding-left: 40px;
       padding-right: 80px;
+      margin-top: 0;
     }
     @media (min-width: $width-desktop) {
       width: 466px;
@@ -135,6 +145,7 @@
     padding: 0;
     margin-left: 34px;
     margin-right: 34px;
+    cursor: pointer;
     @media (min-width: $width-tablet) {
       width: 584px;
       grid-area: b;
@@ -144,6 +155,16 @@
       width: 230px;
       letter-spacing: 1px;
       margin-left: 93px;
+    }
+
+    &:hover{
+      background-color: #444444;
+      color: #ffffff;
+    }
+    
+    &:active{
+      background-color: #444444;
+      color: #7c7c7c;
     }
   }
 }
